Removed Dots From Definitions of Title and OpenGraph

--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -1,4 +1,4 @@
-{{define "title" .}}{{.shortName}} | About{{end}}
+{{define "title"}}{{.PageContext.ShortName}} | About{{end}}
 
 {{define "content"}}
 <div class="container-fluid banner-2">
