--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -1,4 +1,4 @@
-{{define "title" .}}{{.shortName}} | Contact{{end}}
+{{define "title"}}{{.PageContext.ShortName}} | Contact{{end}}
 {{define "content"}}
 <div class="container-fluid banner-2 text-overlay">
   <div class="container">
