--- a/views/partials/base.tmpl
+++ b/views/partials/base.tmpl
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>{{block "title" .}}University Radio York{{end}}</title>   
+    <title>{{block "title" .}}{{.PageContext.LongName}}{{end}}</title>   
 
     {{block "open-graph" .}}
     <meta name="twitter:card" content="summary_large_image"/>
@@ -13,12 +13,12 @@
     <meta name="twitter:creator" content="@URY1350"/>
     <meta property="og:type" content="website"/>
     <meta property="og:locale" content="en_GB" />
-    <meta property="og:title" content="{{.longName}}"/>
+    <meta property="og:title" content="{{.PageContext.LongName}}"/>
     <meta property="og:description" content="University Radio York (URY) is the student radio station for the University of York, broadcasting 24 hours a day during term time on 1350am across campus, and worldwide via this website."/>
     <meta property="og:image" content="{{url "/images/open_graph-general.jpg"}}"/>
     
-    //@TODO: Get URL for page.
-    <meta property="og:url" content="{{url}}"/>
+    <!-- @TODO: Get URL for page.-->
+    <meta property="og:url" content="{{url ""}}"/>
     {{end}}
 
     <link rel="stylesheet" href="{{url "/css/main.scss.css"}}" type="text/css" />
