--- a/views/season.tmpl
+++ b/views/season.tmpl
@@ -1,4 +1,4 @@
-{{define "title" .}}{{.shortName}} | {{with .PageData}}{{.Season.Title}}{{end}}{{end}}
+{{define "title"}}{{.PageContext.ShortName}} | {{with .PageData}}{{.Season.Title}}{{end}}{{end}}
 
 {{define "content"}}
 {{with .PageData}}
