--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -1,4 +1,17 @@
 {{define "title"}}{{.PageContext.ShortName}} | Contact{{end}}
+
+{{define "open-graph"}}
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:site" content="@URY1350"/>
+    <meta name="twitter:creator" content="@URY1350"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:locale" content="en_GB" />
+    <meta property="og:title" content="Say hi to URY!"/>
+    <meta property="og:description" content="At URY, radio is a two-way medium. Send us a message or find us on social media."/>
+    <meta property="og:image" content="https://ury.org.uk/images/open_graph-general.jpg"/>
+    <meta property="og:url" content="https://ury.org.uk/contact/"/>
+{{end}}
+
 {{define "content"}}
 <div class="container-fluid banner-2 text-overlay">
   <div class="container">
