--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -1,5 +1,17 @@
 {{define "title"}}{{.PageContext.ShortName}} | About{{end}}
 
+{{define "open-graph"}}
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:site" content="@URY1350"/>
+    <meta name="twitter:creator" content="@URY1350"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:locale" content="en_GB" />
+    <meta property="og:title" content="{{.PageContext.LongName}} | About"/>
+    <meta property="og:description" content="University Radio York (URY) is the student radio station for the University of York, broadcasting 24 hours a day during term time on 1350am across campus, and worldwide via this website."/>
+    <meta property="og:image" content="https://ury.org.uk/images/open_graph-general.jpg"/>
+    <meta property="og:url" content="https://ury.org.uk/about/"/>
+{{end}}
+
 {{define "content"}}
 <div class="container-fluid banner-2">
   <div class="container">
