--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -1,23 +1,27 @@
 {{define "title"}}{{.PageContext.ShortName}} | {{with .PageData}}{{.Show.Title}}{{end}}{{end}}
 
 {{define "open-graph"}}
+	{{with .PageData}}
 		<meta name="twitter:card" content="summary_large_image"/>
 		<meta name="twitter:site" content="@URY1350"/>
 		<meta name="twitter:creator" content="@URY1350"/>
 		<meta property="og:locale" content="en_GB"/>
-		<meta property="og:title" content="{{.PageContext.ShortName}} | {{with .PageData}}{{.Show.Title}}{{end}}"/>
+		<!-- @TODO: Should use ShortName, but this fails due to being nested within PageData -->
+		<meta property="og:title" content="URY !! Change to use short name as in title. | {{.Show.Title}}"/>
 
-		<!--{{if .Show.Photo}}
-		<meta property="og:image" content="https://ury.org.uk/{{.Show.Photo}}"/>
+		{{if .Show.Photo}}
+		<meta property="og:image" content="https://ury.org.uk{{.Show.Photo}}"/>
 		{{else}}
 		<meta property="og:image" content="https://ury.org.uk/images/open_graph-general.jpg"/>
-		{{end}}-->
-		
-		<meta property="og:type" content="website"/>
-		<meta property="og:url" content="https://ury.org.uk/schedule/shows/{{.ShowID}}/"/>
+		{{end}}
 
-		<!-- @TODO: Remove HTML, so it leaves plain text.
-		<meta property="og:description" content="{{.Show.Description}}"/> -->
+		<meta property="og:type" content="website"/>
+		<!-- @TODO:  Should use ShowID but this is failing. -->
+		<meta property="og:url" content="https://ury.org.uk/schedule/shows/"/>
+
+		<!-- @TODO: Remove HTML, so it leaves plain text.-->
+		<meta property="og:description" content="{{.Show.Description}}"/>
+	{{end}}
 {{end}}
 
 {{define "content"}}
