--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -1,14 +1,13 @@
 {{define "title"}}{{.PageContext.ShortName}} | {{with .PageData}}{{.Show.Title}}{{end}}{{end}}
 
 {{define "open-graph"}}
-	{{with .PageData}}
+	
 		<meta name="twitter:card" content="summary_large_image"/>
 		<meta name="twitter:site" content="@URY1350"/>
 		<meta name="twitter:creator" content="@URY1350"/>
 		<meta property="og:locale" content="en_GB"/>
-		<!-- @TODO: Should use ShortName, but this fails due to being nested within PageData -->
-		<meta property="og:title" content="URY !! Change to use short name as in title. | {{.Show.Title}}"/>
-
+		<meta property="og:title" content="{{.PageContext.ShortName}} | {{with .PageData}}{{.Show.Title}}{{end}}"/>
+	{{with .PageData}}
 		{{if .Show.Photo}}
 		<meta property="og:image" content="https://ury.org.uk{{.Show.Photo}}"/>
 		{{else}}
@@ -16,8 +15,7 @@
 		{{end}}
 
 		<meta property="og:type" content="website"/>
-		<!-- @TODO:  Should use ShowID but this is failing. -->
-		<meta property="og:url" content="https://ury.org.uk/schedule/shows/"/>
+		<meta property="og:url" content="https://ury.org.uk/schedule/shows/{{.Show.ShowID}}"/>
 
 		<!-- @TODO: Remove HTML, so it leaves plain text.-->
 		<meta property="og:description" content="{{.Show.Description}}"/>
