Fixed typing error

--- a/views/partials/base.tmpl
+++ b/views/partials/base.tmpl
@@ -15,7 +15,7 @@
     <meta property="og:locale" content="en_GB" />
     <meta property="og:title" content="{{.PageContext.LongName}}"/>
     <meta property="og:description" content="University Radio York (URY) is the student radio station for the University of York, broadcasting 24 hours a day during term time on 1350am across campus, and worldwide via this website."/>
-    <meta property="og:image" content="{{https://ury.org.uk/images/open_graph-general.jpg"}}"/>
+    <meta property="og:image" content="https://ury.org.uk/images/open_graph-general.jpg"/>
     <meta property="og:url" content="https://ury.org.uk"/>
     {{end}}
 
