--- a/views/people.tmpl
+++ b/views/people.tmpl
@@ -6,14 +6,12 @@
     <meta name="twitter:creator" content="@URY1350"/>
     <meta property="og:locale" content="en_GB" />
     <meta property="og:title" content="{{.PageContext.ShortName}} | {{with .PageData}}{{.User.Fname}} {{.User.Sname}}{{end}} Profile"/>
-    
     {{with .PageData}}
-      <meta property="og:url" content="https://ury.org.uk/people/{{.User.MemberID}}"/>
-      
-      <!--@TODO: Remove html so it is just plain text. -->
+      <meta property="og:url" content="https://ury.org.uk/people/{{.User.MemberID}}"/>     
+      <!-- @TODO: Remove html so it is just plain text. -->
+      <!-- @TODO: Check if the user has a bio, if not use general bio -->
       <meta property="og:description" content="{{.User.Bio}}" />
-
-      <meta property="og:image" content="https://ury.org.uk/{{.User.Photo}}"/>
+      <meta property="og:image" content="https://ury.org.uk{{.User.Photo}}"/>
       <meta property="og:type" content="profile"/> 
       <meta property="profile:username" content="{{.User.MemberID}}"/> 
       <meta property="profile:first_name" content="{{.User.Fname}}"/>
