--- a/views/season.tmpl
+++ b/views/season.tmpl
@@ -6,20 +6,7 @@
 	<meta name="twitter:creator" content="@URY1350"/>
 	<meta property="og:locale" content="en_GB"/>
 	<meta property="og:title" content="{{.PageContext.ShortName}} | {{with .PageData}}{{.Season.Title}}{{end}}"/>
-	
-	{{with .PageData}}
-		{{if .Show.Photo}}
-			<meta property="og:image" content="https://ury.org.uk{{.Show.Photo}}"/>
-		{{else}}
-			<meta property="og:image" content="https://ury.org.uk/images/open_graph-general.jpg"/>
-		{{end}}
-	
-		<meta property="og:type" content="website"/>
-		<meta property="og:url" content="https://ury.org.uk/schedule/shows/{{.ShowID}}/"/>
-	{{end}}
-
-	<!-- @TODO: Remove HTML, so it leaves plain text.
-	<meta property="og:description" content="{{.Show.Description}}"/> -->
+	<!-- @TODO: Add Season image from Show. -->
 {{end}}
 
 {{define "content"}}
