Added General Image To Seasons

--- a/views/season.tmpl
+++ b/views/season.tmpl
@@ -7,6 +7,7 @@
 	<meta property="og:locale" content="en_GB"/>
 	<meta property="og:title" content="{{.PageContext.ShortName}} | {{with .PageData}}{{.Season.Title}}{{end}}"/>
 	<!-- @TODO: Add Season image from Show. -->
+	<meta property="og:image" content="https://ury.org.uk/images/open_graph-general.jpg"/>
 {{end}}
 
 {{define "content"}}
