Updated URYNews Twitter Handle

--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -50,7 +50,7 @@
   </div>
   <div class="row">
     <div class="col">
-      <h2><a href="mailto:newsroom@ury.org.uk" title="Email URY Newsroom">newsroom@ury.org.uk</a> <span class="slash-divider">/</span> <a href="//twitter.com/URYNews" title="URY News Twitter" target="_blank">@URY1350</a></h2>
+      <h2><a href="mailto:newsroom@ury.org.uk" title="Email URY Newsroom">newsroom@ury.org.uk</a> <span class="slash-divider">/</span> <a href="//twitter.com/URYNews" title="URY News Twitter" target="_blank">@URYNews</a></h2>
     </div>
   </div>
 </div>
