Added FullURL to config, this means that "https://ury.org.uk" doesn't have to be typed also making testing easier.

--- a/views/people.tmpl
+++ b/views/people.tmpl
@@ -5,19 +5,17 @@
     <meta name="twitter:site" content="@URY1350"/>
     <meta name="twitter:creator" content="@URY1350"/>
     <meta property="og:locale" content="en_GB" />
-    <meta property="og:title" content="{{.PageContext.ShortName}} | {{with .PageData}}{{.User.Fname}} {{.User.Sname}}{{end}} Profile"/>
-    {{with .PageData}}
-      <meta property="og:url" content="https://ury.org.uk/people/{{.User.MemberID}}"/>     
-      <!-- @TODO: Remove html so it is just plain text. -->
-      <!-- @TODO: Check if the user has a bio, if not use general bio -->
-      <meta property="og:description" content="{{.User.Bio}}" />
-      <meta property="og:image" content="https://ury.org.uk{{.User.Photo}}"/>
-      <meta property="og:type" content="profile"/> 
-      <meta property="profile:username" content="{{.User.MemberID}}"/> 
-      <meta property="profile:first_name" content="{{.User.Fname}}"/>
-      <meta property="profile:last_name" content="{{.User.Sname}}"/>
-    {{end}}
-{{end}}
+    <meta property="og:title" content="{{.PageContext.ShortName}} | {{.PageData.User.Fname}} {{.PageData.User.Sname}} Profile"/>
+    <meta property="og:url" content="{{.PageContext.FullURL}}/people/{{.PageData.User.MemberID}}"/>     
+    <!-- @TODO: Remove html so it is just plain text. -->
+    <!-- @TODO: Check if the user has a bio, if not use general bio -->
+    <meta property="og:description" content="{{.PageData.User.Bio}}" />
+    <meta property="og:image" content="{{.PageContext.FullURL}}{{.PageData.User.Photo}}"/>
+    <meta property="og:type" content="profile"/> 
+    <meta property="profile:username" content="{{.PageData.User.MemberID}}"/> 
+    <meta property="profile:first_name" content="{{.PageData.User.Fname}}"/>
+    <meta property="profile:last_name" content="{{.PageData.User.Sname}}"/>
+  {{end}}
 
 {{define "content"}}
 
