--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -2,8 +2,8 @@
 
 {{define "open-graph"}}
     <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:site" content="@URY1350"/>
-    <meta name="twitter:creator" content="@URY1350"/>
+    <meta name="twitter:site" content="@{{.PageContext.MainTwitter}}"/>
+    <meta name="twitter:creator" content="@{{.PageContext.MainTwitter}}"/>
     <meta property="og:type" content="website"/>
     <meta property="og:locale" content="en_GB" />
     <meta property="og:title" content="Say hi to URY!"/>
@@ -26,7 +26,7 @@
 <div class="container-fluid container-padded text-center">
   <div class="row">
     <div class="col-md-4">
-      <h2><a href="//twitter.com/URY1350" title="URY Twitter" target="_blank">@URY1350</a></h2>
+      <h2><a href="//twitter.com/{{.PageContext.MainTwitter}}" title="URY Twitter" target="_blank">@{{.PageContext.MainTwitter}}</a></h2>
       <span>On Twitter</span>
     </div>
     <div class="col-md-4">
@@ -35,7 +35,7 @@
     </div>
     <div class="col-md-4">
       <h2>
-        <a href="//facebook.com/URY1350" title="URY Facebook Page" target="_blank">/URY1350</a>
+        <a href="//facebook.com/{{.PageContext.MainFacebook}}" title="URY Facebook Page" target="_blank">/{{.PageContext.MainFacebook}}</a>
       </h2>
       <span>On Facebook</span>
     </div>
@@ -50,7 +50,7 @@
   </div>
   <div class="row">
     <div class="col">
-      <h2><a href="mailto:newsroom@ury.org.uk" title="Email URY Newsroom">newsroom@ury.org.uk</a> <span class="slash-divider">/</span> <a href="//twitter.com/URYNews" title="URY News Twitter" target="_blank">@URYNews</a></h2>
+      <h2><a href="mailto:newsroom@ury.org.uk" title="Email URY Newsroom">newsroom@ury.org.uk</a> <span class="slash-divider">/</span> <a href="//twitter.com/{{.PageContext.NewsTwitter}}" title="URY News Twitter" target="_blank">@{{.PageContext.NewsTwitter}}</a></h2>
     </div>
   </div>
 </div>
