--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -1,8 +1,8 @@
 {{define "title"}}{{.PageContext.ShortName}} | Get Involved{{end}}
 {{define "open-graph"}}
     <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:site" content="@URY1350"/>
-    <meta name="twitter:creator" content="@URY1350"/> 
+    <meta name="twitter:site" content="@{{.PageContext.MainTwitter}}"/>
+    <meta name="twitter:creator" content="@{{.PageContext.MainTwitter}}"/> 
     <meta property="og:locale" content="en_GB" />
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Want to help York make incredible award winning radio?"/>
