--- a/views/partials/base.tmpl
+++ b/views/partials/base.tmpl
@@ -9,8 +9,8 @@
 
     {{block "open-graph" .}}
         <meta name="twitter:card" content="summary_large_image"/>
-        <meta name="twitter:site" content="@URY1350"/>
-        <meta name="twitter:creator" content="@URY1350"/>
+        <meta name="twitter:site" content="@{{.PageContext.MainTwitter}}"/>
+        <meta name="twitter:creator" content="@{{.PageContext.MainTwitter}}"/>
         <meta property="og:type" content="website"/>
         <meta property="og:locale" content="en_GB" />
         <meta property="og:title" content="{{.PageContext.LongName}}"/>
