--- a/views/season.tmpl
+++ b/views/season.tmpl
@@ -2,8 +2,8 @@
 
 {{define "open-graph"}}
 	<meta name="twitter:card" content="summary_large_image"/>
-	<meta name="twitter:site" content="@URY1350"/>
-	<meta name="twitter:creator" content="@URY1350"/>
+	<meta name="twitter:site" content="@{{.PageContext.MainTwitter}}"/>
+	<meta name="twitter:creator" content="@{{.PageContext.MainTwitter}}"/>
 	<meta property="og:locale" content="en_GB"/>
 	<meta property="og:title" content="{{.PageContext.ShortName}} | {{.PageData.Season.Title}}"/>
 	<!-- @TODO: Add Season image from Show. -->
