--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -1,7 +1,7 @@
 {{define "title"}}{{.PageContext.ShortName}} | {{.PageData.Show.Title}}{{end}}
 
 {{define "open-graph"}}
-	<meta name="twitter:card" content="summary_large_image"/>
+	<meta name="twitter:card" content="summary"/>
 	<meta name="twitter:site" content="@{{.PageContext.MainTwitter}}"/>
 	<meta name="twitter:creator" content="@{{.PageContext.MainTwitter}}"/>
 	<meta property="og:locale" content="en_GB"/>
