Corrected Spelling on Homepage

--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -22,7 +22,7 @@
           <hr>
           <div class="row">
             <div class="col-lg-6">
-              <p>University Radio York has been alive since 1968, when it became the first legal independant radio station in the UK!</p>
+              <p>University Radio York has been alive since 1968, when it became the first legal independent radio station in the UK!</p>
               <p>Help us continue our legacy by joining the URY team.</p>
               <p>Contact our teams to find out more.</p>
             </div>
