Added Pinned Tab Icon

--- a/views/partials/base.tmpl
+++ b/views/partials/base.tmpl
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <link rel="mask-icon" href="{{url "/images/pinnedTab.svg"}}" color="black">
     <title>{{block "title" .}}{{.PageContext.LongName}}{{end}}</title>   
 
     {{block "open-graph" .}}
