--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -1,7 +1,7 @@
 $primary-color: rgba(0, 51, 103, 1);
 $secondary-color: rgba(1, 26, 50, 1);
 $third-color: rgba(2, 33, 63, 1);
-$content-bg-1: #e1e1e1;
+$off-white-color: #e1e1e1;
 
 $blue: #0073E6;
 $red: #D0011B;
