improve font readability
- lighter font weight added to all elements except for headers

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -2,6 +2,11 @@ $font-family-body: 'Roboto', sans-serif;
 $font-family-heading: 'Raleway', sans-serif;
 
 
+* {
+  font-family: $font-family-body;
+  font-weight: 300;
+}
+
 h1, h2, h3, h4, h5, h6 {
     font-family: $font-family-heading;
     font-weight: medium;
@@ -26,6 +31,4 @@ h5 {
   font-size: 1rem;
 }
 
-p {
-    font-family: $font-family-body;
-}
+
