--- a/sass/base/_utils.scss
+++ b/sass/base/_utils.scss
@@ -8,6 +8,7 @@ ul.split-evenly-2 {
     li {
       float: left;
       width: 50%;
+      padding-right: 1em;
     }
   }
   @include media-breakpoint-up(xl) {
