--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,15 +1,16 @@
 $font-family-body: 'Roboto', sans-serif;
 $font-family-heading: 'Raleway', sans-serif;
 
-
 * {
   font-family: $font-family-body;
   font-weight: 300;
 }
 
 h1, h2, h3, h4, h5, h6 {
+  * {
     font-family: $font-family-heading;
-    font-weight: medium;
+    font-weight: 500 !important;
+  }
 }
 
 h1 {
