improve padding on containers

--- a/views/people.tmpl
+++ b/views/people.tmpl
@@ -22,7 +22,7 @@
             </div>
           </div>
           <div class="col-12 col-lg-9">
-            <h1 class="user-name pt-3">{{.User.Fname}} {{.User.Sname}}</h1>
+            <h1 class="user-name">{{.User.Fname}} {{.User.Sname}}</h1>
             <hr>
             <div class="row">
               {{range getLastShowMeta .ShowCredits 6}}
