--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -27,7 +27,7 @@
               </div>
 	        </div>
 	        <div class="col-12 col-lg-9">
-	          <h1 class="pt-3">
+	          <h1 class="">
 	        	{{.Show.Title}}
 	          </h1>
 	          <hr>
