--- a/views/people.tmpl
+++ b/views/people.tmpl
@@ -11,12 +11,12 @@
         <div class="row">
           <div class="col-12 col-lg-3">
             <img class="user-img rounded-circle img-fluid" src="https://ury.org.uk{{.User.Photo}}" alt="Photo of {{.User.Fname}} {{.User.Sname}}">
-            <div class="row">
-              <div class="col text-center">
+            <div class="row text-muted">
+              <div class="col text-right">
                 <span>Shows: {{len .ShowCredits}}</span>
               </div>
-              
-              <div class="col text-center">
+              |
+              <div class="col text-left">
                 <span>Hours: {{showsToHours .ShowCredits}}</span>
               </div>
             </div>
@@ -28,14 +28,14 @@
               {{range getLastShowMeta .ShowCredits 6}}
                 <div class="col-4 col-md-2 p-0">
                   <a href="{{.MicroSiteLink.URL}}" title="View the {{.Title}} webpage.">
-                    <img class="img-fluid" src="https://ury.org.uk{{.Photo}}" alt="{{.Title}} logo." />
+                    <img class="img-fluid p-1" src="https://ury.org.uk{{.Photo}}" alt="{{.Title}} logo." />
                   </a>
                 </div>
               {{end}}
             </div>
             <div class="row">
               <div class="col">
-                <a class="float-right" href="#shows">All shows..</a>
+                <a class="float-right" href="#shows">more...</a>
               </div>
             </div>
           </div>
