rename class from split-evenly-2 to split-evenly
More appropriate as there are no longer 2 columns max

--- a/sass/base/_utils.scss
+++ b/sass/base/_utils.scss
@@ -1,6 +1,6 @@
 // Splits a list into two even columns for anything above md and three for anything above xl
 // otherwise its one column
-ul.split-evenly-2 {
+ul.split-evenly {
   text-align: left;
   overflow: auto;
   width: 100%;
