--- a/views/people.tmpl
+++ b/views/people.tmpl
@@ -44,7 +44,7 @@
     </div> <!-- /outer containter -->
     <div class="container-fluid bg-secondary">
       <div class="container">
-        <div class="">
+        <div>
           {{if .User.Bio}}
             <h2>Bio</h2>
             <hr>
@@ -75,7 +75,7 @@
               <a href="{{.MicroSiteLink.URL}}" title="View the {{.Title}} webpage.">{{.Title}}</a>
             </li>
           {{end}}
-          </uL>
+          </ul>
         </div>
       </div>
     </div>
