Tidy up scss files

--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -8,10 +8,9 @@ $red: #D0011B;
 
 //font
 $base-font-size: 16px;
-$mobile-font-size:10px;
-$mobile-max-width:770px;
-
+$mobile-font-size: 10px;
+$mobile-max-width: 770px;
 
 //Current and Next
-$current-next-now-bg:#003367;
-$current-next-next-bg:rgba(0,51,103,0.85);
+$current-next-now-bg: #003367;
+$current-next-next-bg: rgba(0, 51, 103, 0.85);
