--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,7 +3,6 @@
 @import "partials/partials";
 @import "elements/elements";
 
-
 .ellipsis {
   white-space: nowrap;
   overflow: hidden;
@@ -20,11 +19,13 @@ html {
   }
 }
 
+
 @include media-breakpoint-up(md) {
   html {
     font-size: 16px;
   }
 }
+
 
 @include media-breakpoint-up(lg) {
   html {
@@ -32,11 +33,11 @@ html {
   }
 }
 
+
 /* Space out content a bit */
 
 body {
   padding-top: 49px;
-
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -70,41 +71,43 @@ footer {
   .row {
     min-height: 3em;
   }
-
 }
 
 .container-padded {
-  padding-top:2em;
-  padding-bottom:2em;
+  padding-top: 2em;
+  padding-bottom: 2em;
 }
 
 .banner-2 {
-  background: url('/images/bg-banner-2.jpg') center center no-repeat;
+  background: url("/images/bg-banner-2.jpg") center center no-repeat;
   background-size: cover;
   color: white;
-  padding:10em 0;
+  padding: 10em 0;
 }
 
 /* Scroll horizontal, used for horizontal scrolling rows */
 .scroll-horiz {
   overflow-x: scroll;
-  overflow-y: hidden; 
+  overflow-y: hidden;
   flex-wrap: nowrap;
   -webkit-overflow-scrolling: touch;
 }
 
 .key-contacts .card {
   height: 100%;
+
   a {
     word-wrap: break-word;
   }
 }
+
 .slash-divider {
-  font-size:3em;
+  font-size: 3em;
   vertical-align: middle;
   font-family: sans-serif;
   font-weight: 100;
 }
+
 /* User page styling. */
 .user-img {
   border: #e1e1e1 7px solid;
@@ -112,6 +115,7 @@ footer {
   max-width: 100%;
   object-fit: cover;
 }
+
 .card .card-img-top.rounded-circle {
   border: #e1e1e1 7px solid;
   max-width: 100%;
@@ -122,35 +126,54 @@ footer {
   background-color: $primary-color;
   color: white;
 }
+
 .user-on-demand {
   background-color: $secondary-color;
   color: white;
 }
+
 .page404 {
-  text-align:center;
+  text-align: center;
   margin: 0 auto;
+
   h1 {
-    font-size:25vmin;
+    font-size: 25vmin;
     padding-top: 25vh;
     padding-bottom: 25vh;
   }
+
   .spinner {
-    display:inline-block;
-    width:25vmin;
-    height:25vmin;
+    display: inline-block;
+    width: 25vmin;
+    height: 25vmin;
     position: relative;
     top: 6vmin;
-    -webkit-animation:spin 4s linear infinite;
-    -moz-animation:spin 4s linear infinite;
-    animation:spin 4s linear infinite;
+    -webkit-animation: spin 4s linear infinite;
+    -moz-animation: spin 4s linear infinite;
+    animation: spin 4s linear infinite;
     background: url("/images/URYRecord.png") center center;
     background-size: contain;
   }
 }
 
-@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
-@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
-@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+@-moz-keyframes spin {
+  100% {
+    -moz-transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
 
 /* Responsive: Portrait tablets and up */
 
@@ -161,16 +184,18 @@ footer {
     padding-left: 0;
     margin-bottom: 30px;
   }
+
   /* Remove the bottom border on the jumbotron for visual effect */
   .jumbotron {
     border-bottom: 0;
   }
+
   .mobile-only {
     display: none;
   }
 }
 
-.container-narrow>hr {
+.container-narrow > hr {
   margin: 30px 0;
 }
 
@@ -180,26 +205,32 @@ footer {
   text-align: center;
   border-bottom: 1px solid #e5e5e5;
 }
+
 .jumbotron .btn {
   padding: 14px 24px;
   font-size: 21px;
 }
+
 @media screen and (max-width: 767px) {
   .mobile-hide {
     display: none;
   }
+
   .header-large {
     height: 400px;
   }
+
   .user-profile {
     margin-top: -320px;
     margin-bottom: 30px;
   }
+
   .mobile-col-right {
     width: 66.66666666%;
     float: right;
     padding: 30px 15px;
   }
+
   .banner {
     display: none;
   }
@@ -212,11 +243,13 @@ footer {
   color: #555;
   border: 1px solid #D7D7D7;
 }
+
 .show-img {
   @extend .user-img;
 }
+
 .tag {
-  font-size:0.8em;
+  font-size: 0.8em;
 }
 
 .podcast.card {
