--- a/sass/base/_backgrounds.scss
+++ b/sass/base/_backgrounds.scss
@@ -1,24 +1,31 @@
 .bg-off-white {
   background: $off-white-color;
 }
+
 .bg-primary, .bg-secondary, .bg-third {
   color: #fff;
+
   a {
-    color: #6Af
+    color: #6Af;
   }
 }
+
 .bg-primary {
   background: $primary-color;
 }
+
 .bg-secondary {
   background: $secondary-color;
+
   hr {
     border-color: $off-white-color;
   }
 }
+
 .bg-third {
   background: $third-color;
 }
+
 .bg-transparent {
   background: none;
 }
