--- a/sass/base/_buttons.scss
+++ b/sass/base/_buttons.scss
@@ -6,7 +6,7 @@ $button-color: #fff;
   font-family: $font-family-heading;
   font-weight: 500;
   font-size: $base-font-size;
-  box-shadow: 0px 2px 5px -1px rgba(0,0,0,0.75);
+  box-shadow: 0px 2px 5px -1px rgba(0, 0, 0, 0.75);
 
   &.btn-primary {
     background: $blue;
