--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,5 +1,5 @@
-$font-family-body: 'Roboto', sans-serif;
-$font-family-heading: 'Raleway', sans-serif;
+$font-family-body: "Roboto", sans-serif;
+$font-family-heading: "Raleway", sans-serif;
 
 * {
   font-family: $font-family-body;
@@ -9,27 +9,30 @@ $font-family-heading: 'Raleway', sans-serif;
 h1, h2, h3, h4, h5, h6 {
   * {
     font-family: $font-family-heading;
-    font-weight: 500 !important;
+    font-weight: 500;
   }
 }
 
 h1 {
   font-size: 2.5rem;
 }
+
 h2 {
   font-size: 2rem;
 }
+
 h3 {
   font-size: 1.75rem;
 }
+
 h3 {
   font-size: 1.5rem;
 }
+
 h4 {
   font-size: 1.25rem;
 }
+
 h5 {
   font-size: 1rem;
 }
-
-
