--- a/sass/elements/_currentAndNext.scss
+++ b/sass/elements/_currentAndNext.scss
@@ -1,25 +1,30 @@
 .current-next {
-  background: url('/images/bg-banner-1.jpg') center center no-repeat;
+  background: url("/images/bg-banner-1.jpg") center center no-repeat;
   background-size: cover;
   color: white;
-  padding:10em 0;
+  padding: 10em 0;
 }
+
 .current-and-next {
-  color:white;
+  color: white;
 
   .current-and-next-img {
     background: $current-next-now-bg;
+
     img {
-      width:100%;
-      height:auto;
+      width: 100%;
+      height: auto;
     }
   }
+
   .current-and-next-now {
     background: $current-next-now-bg;
   }
+
   .current-and-next-next {
     background: $current-next-next-bg;
   }
+
   .listen-btn {
     position: absolute;
     bottom: 0.5em;
