--- a/views/people.tmpl
+++ b/views/people.tmpl
@@ -10,7 +10,9 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-lg-3">
-            <img class="user-img rounded-circle img-fluid" src="https://ury.org.uk{{.User.Photo}}" alt="Photo of {{.User.Fname}} {{.User.Sname}}">
+            <div class="user-img">
+              <img class="img-fluid" src="https://ury.org.uk{{.User.Photo}}" alt="Photo of {{.User.Fname}} {{.User.Sname}}">
+            </div>
             <div class="row text-muted">
               <div class="col text-right">
                 <span>Shows: {{len .ShowCredits}}</span>
