--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -7,12 +7,12 @@
 	<meta property="og:locale" content="en_GB"/>
 	<meta property="og:title" content="{{.PageContext.ShortName}} | {{.PageData.Show.Title}}"/>
 	{{if .PageData.Show.Photo}}
-		<meta property="og:image" content="{{.PageContext.FullURL}}{{.PageData.Show.Photo}}"/>
+		<meta property="og:image" content="{{.PageContext.FullURL}}{{url ""}}{{.PageData.Show.Photo}}"/>
 	{{else}}
-		<meta property="og:image" content="{{.PageContext.FullURL}}/images/open_graph-general.jpg"/>
+		<meta property="og:image" content="{{.PageContext.FullURL}}{{url "images/open_graph-general.jpg"}}"/>
 	{{end}}
 	<meta property="og:type" content="website"/>
-	<meta property="og:url" content="{{.PageContext.FullURL}}/schedule/shows/{{.PageData.Show.ShowID}}"/>
+	<meta property="og:url" content="{{.PageContext.FullURL}}{{url "/schedule/shows/"}}{{.PageData.Show.ShowID}}"/>
 	<!-- @TODO: Remove HTML, so it leaves plain text.-->
 	<meta property="og:description" content="{{.PageData.Show.Description}}"/>
 {{end}}
