--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -8,8 +8,8 @@
     <meta property="og:locale" content="en_GB" />
     <meta property="og:title" content="{{.PageContext.LongName}} | About"/>
     <meta property="og:description" content="{{.PageContext.SiteDescription}}"/>
-    <meta property="og:image" content="{{.PageContext.FullURL}}/images/open_graph-general.jpg"/>
-    <meta property="og:url" content="{{.PageContext.FullURL}}/about/"/>
+    <meta property="og:image" content="{{.PageContext.FullURL}}{{url "/images/open_graph-general.jpg"}}"/>
+    <meta property="og:url" content="{{.PageContext.FullURL}}{{url "/about/"}}"/>
 {{end}}
 
 {{define "content"}}
