--- a/views/partials/base.tmpl
+++ b/views/partials/base.tmpl
@@ -16,8 +16,8 @@
         <meta property="og:locale" content="en_GB" />
         <meta property="og:title" content="{{.PageContext.LongName}}"/>
         <meta property="og:description" content="{{.PageContext.SiteDescription}}"/>
-        <meta property="og:image" content="{{.PageContext.FullURL}}/images/open_graph-general.jpg"/>
-        <meta property="og:url" content="{{.PageContext.FullURL}}/"/>
+        <meta property="og:image" content="{{.PageContext.FullURL}}{{url "/images/open_graph-general.jpg"}}"/>
+        <meta property="og:url" content="{{.PageContext.FullURL}}{{url "/"}}"/>
     {{end}}
 
     <link rel="stylesheet" href="{{url "/css/main.scss.css"}}" type="text/css" />
