--- a/views/season.tmpl
+++ b/views/season.tmpl
@@ -7,7 +7,7 @@
 	<meta property="og:locale" content="en_GB"/>
 	<meta property="og:title" content="{{.PageContext.ShortName}} | {{.PageData.Season.Title}}"/>
 	<!-- @TODO: Add Season image from Show. -->
-	<meta property="og:image" content="{{.PageContext.FullURL}}/images/open_graph-general.jpg"/>
+	<meta property="og:image" content="{{.PageContext.FullURL}}{{url "/images/open_graph-general.jpg"}}"/>
 {{end}}
 
 {{define "content"}}
