--- a/views/people.tmpl
+++ b/views/people.tmpl
@@ -10,7 +10,7 @@
     <!-- @TODO: Remove html so it is just plain text. -->
     <!-- @TODO: Check if the user has a bio, if not use general bio -->
     <meta property="og:description" content="{{.PageData.User.Bio}}" />
-    <meta property="og:image" content="{{.PageContext.FullURL}}{{url ""}}{{.PageData.User.Photo}}"/>
+    <meta property="og:image" content="{{.PageContext.FullURL}}{{url .PageData.User.Photo}}"/>
     <meta property="og:type" content="profile"/> 
     <meta property="profile:username" content="{{.PageData.User.MemberID}}"/> 
     <meta property="profile:first_name" content="{{.PageData.User.Fname}}"/>
