--- a/views/competition-terms.tmpl
+++ b/views/competition-terms.tmpl
@@ -28,7 +28,7 @@
 </div>
 <div class="container-fluid container-padded ">
   <div class="container">
-    <h2>Competition Specific Rules</h2>
+    <h2 class="text-center">Competition Specific Rules</h2>
     <p>All general rules apply to these competitions, unless changes are explicitly stated!</p>
       <h3>Summer Ball Competition</h3>
       <ul>
