--- a/views/partials/base.tmpl
+++ b/views/partials/base.tmpl
@@ -9,25 +9,25 @@
     <title>{{block "title" .}}{{.PageContext.LongName}}{{end}}</title>   
 
     {{block "open-graph" .}}
-    <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:site" content="@{{.PageContext.MainTwitter}}"/>
-    <meta name="twitter:creator" content="@{{.PageContext.MainTwitter}}"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:locale" content="en_GB" />
-    <meta property="og:title" content="{{.PageContext.LongName}}"/>
-    <meta property="og:description" content="{{.PageContext.SiteDescription}}"/>
-    <meta property="og:image" content="{{.PageContext.FullURL}}{{url "/images/open_graph-general.jpg"}}"/>
-    <meta property="og:url" content="{{.PageContext.FullURL}}{{url "/"}}"/>
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@{{.PageContext.MainTwitter}}">
+    <meta name="twitter:creator" content="@{{.PageContext.MainTwitter}}">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="en_GB">
+    <meta property="og:title" content="{{.PageContext.LongName}}">
+    <meta property="og:description" content="{{.PageContext.SiteDescription}}">
+    <meta property="og:image" content="{{.PageContext.FullURL}}{{url "/images/open_graph-general.jpg"}}">
+    <meta property="og:url" content="{{.PageContext.FullURL}}{{url "/"}}">
     {{end}}
 
-    <link rel="stylesheet" href="{{url "/css/main.scss.css"}}" type="text/css" />
+    <link rel="stylesheet" href="{{url "/css/main.scss.css"}}" type="text/css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
 	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,500|Roboto:300,400,500" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,500|Roboto:300,400,500">
 </head>
 <body>
 
