Added URL Prefix

--- a/views/competition-terms.tmpl
+++ b/views/competition-terms.tmpl
@@ -26,19 +26,21 @@
     <p>Any further information, questions, or complaints about URY’s competitions must be addressed to the Head of Marketing via email: <a href="mailto:head.of.marketing@ury.org.uk">head.of.marketing@ury.org.uk</a>. Complaints about any competition must be made within 2 weeks of the competition closing. After this time, completion specific terms will be removed from the website.</p>
   </div>
 </div>
-<div class="container-fluid container-padded ">
+
+<!-- Competition Specific Rules. Remove section when no active competitions. Should Contain (Title, Competition Period, Prizes, How to enter) -->
+<div class="container-fluid container-padded">
   <div class="container">
     <h2 class="text-center">Competition Specific Rules</h2>
     <p>All general rules apply to these competitions, unless changes are explicitly stated!</p>
       <h3>Summer Ball Competition</h3>
       <ul>
-        <li><strong>Competition Closes:</strong> 12PM 10/06/2017</li>
+        <li><strong>Competition Period:</strong> 3PM 02/06/2017 - 12PM 10/06/2017</li>
         <li><strong>Prizes:</strong></li>
         <ul>
           <li>1 Summer Ball Ticket [2 available]</li>
         </ul>
-        <li><strong>How to enter:</strong> Answer the question pinned on our facebook page (ury1350).</li>
+        <li><strong>How to enter:</strong> Answer the question pinned on our facebook page (URY1350). Correct entries will be assigned a random number. Winners will be drawn after the competition closes on 10/06/2017.</li>
       </ul>
   </div>
-</div>
+</div> 
 {{end}}
