--- a/views/partials/base.tmpl
+++ b/views/partials/base.tmpl
@@ -5,7 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <link rel="mask-icon" href="{{url "/images/pinnedTab.svg"}}" color="#003367">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{url "/apple-touch-icon.png"}}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{url "/favicon-32x32.png"}}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{url "/favicon-16x16.png"}}">
+    <link rel="manifest" href="{{url "/manifest.json"}}">
+    <link rel="mask-icon" href="{{url "/safari-pinned-tab.svg"}}" color="#003367">
+    <meta name="theme-color" content="#003367">
+    
     <title>{{block "title" .}}{{.PageContext.LongName}}{{end}}</title>   
 
     {{block "open-graph" .}}
